# elven-forest

./: .gitignore  Cargo.toml  README.md  a.out  ld-a.out  runtest.sh  shell.nix
elven-forest/: Cargo.toml  size-analyze.py
elven-forest/src/: main.rs  size.rs
elven-parser/: Cargo.toml
elven-parser/src/: addrs.rs  consts.rs  defs.rs  idx.rs  lib.rs  raw.rs  read.rs  write.rs
elven-parser/src/raw/: consts.rs
elven-wald/: Cargo.toml
elven-wald/src/: lib.rs  main.rs  opts.rs  storage.rs  utils.rs
elven-wald/tests/: runtest.rs
elven-wald/tests/integration/: mod.rs  simple_asm.rs
test_data/: calls_obj.c  create_test_data.sh  hello_world_obj.c
tests/single_object_file/: empty.asm  run.sh
uwuwind/: Cargo.toml
uwuwind/src/: api.rs  dwarf.rs
